; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/posix1e/extr_acl_support_nfs4.c_format_flags_verbose.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/posix1e/extr_acl_support_nfs4.c_format_flags_verbose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.flagnames_struct = type { i32 }

@.str = private unnamed_addr constant [4 x i8] c"%s/\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i32, %struct.flagnames_struct*)* @format_flags_verbose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @format_flags_verbose(i8* %0, i64 %1, i32 %2, %struct.flagnames_struct* %3) #0 {
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.flagnames_struct*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  store %struct.flagnames_struct* %3, %struct.flagnames_struct** %8, align 8
  store i64 0, i64* %9, align 8
  br label %11

11:                                               ; preds = %15, %4
  %12 = load %struct.flagnames_struct*, %struct.flagnames_struct** %8, align 8
  %13 = call i8* @format_flag(i32* %7, %struct.flagnames_struct* %12)
  store i8* %13, i8** %10, align 8
  %14 = icmp ne i8* %13, null
  br i1 %14, label %15, label %31

15:                                               ; preds = %11
  %16 = load i8*, i8** %5, align 8
  %17 = load i64, i64* %9, align 8
  %18 = getelementptr inbounds i8, i8* %16, i64 %17
  %19 = load i64, i64* %6, align 8
  %20 = load i64, i64* %9, align 8
  %21 = sub i64 %19, %20
  %22 = load i8*, i8** %10, align 8
  %23 = call i64 @snprintf(i8* %18, i64 %21, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str, i64 0, i64 0), i8* %22)
  %24 = load i64, i64* %9, align 8
  %25 = add i64 %24, %23
  store i64 %25, i64* %9, align 8
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* %6, align 8
  %28 = icmp ult i64 %26, %27
  %29 = zext i1 %28 to i32
  %30 = call i32 @assert(i32 %29)
  br label %11

31:                                               ; preds = %11
  %32 = load i64, i64* %9, align 8
  %33 = icmp ugt i64 %32, 0
  br i1 %33, label %34, label %45

34:                                               ; preds = %31
  %35 = load i64, i64* %9, align 8
  %36 = add i64 %35, -1
  store i64 %36, i64* %9, align 8
  %37 = load i8*, i8** %5, align 8
  %38 = load i64, i64* %9, align 8
  %39 = getelementptr inbounds i8, i8* %37, i64 %38
  %40 = load i8, i8* %39, align 1
  %41 = sext i8 %40 to i32
  %42 = icmp eq i32 %41, 47
  %43 = zext i1 %42 to i32
  %44 = call i32 @assert(i32 %43)
  br label %45

45:                                               ; preds = %34, %31
  %46 = load i8*, i8** %5, align 8
  %47 = load i64, i64* %9, align 8
  %48 = getelementptr inbounds i8, i8* %46, i64 %47
  store i8 0, i8* %48, align 1
  ret i32 0
}

declare dso_local i8* @format_flag(i32*, %struct.flagnames_struct*) #1

declare dso_local i64 @snprintf(i8*, i64, i8*, i8*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
